Scala/StringScala
Welcome to
      ____              __
     / __/__  ___ _____/ /__
    _\ \/ _ \/ _ `/ __/  '_/
   /___/ .__/\_,_/_/ /_/\_\   version 2.0.1
      /_/
         
Using Scala version 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_60)
Type in expressions to have them evaluated.
Type :help for more information.

scala> val a = 10
a: Int = 10

scala> val b = a + 1
b: Int = 11

scala> a = a + 1
<console>:25: error: reassignment to val
       a = a + 1
         ^

scala> def add(a: Int, b: Int): Int = a + b
add: (a: Int, b: Int)Int

scala> val m: Int = add(1,2)
m: Int = 3

scala> println(m)
3

scala> def fun(a: Int): Int = {
     | a + 1
     | a - 2
     | a * 3
     | }
fun: (a: Int)Int

scala> val p: Int = fun(10)
p: Int = 30

scala> println(p)
30

scala> #no explicit "return"
<console>:1: error: illegal start of definition
#no explicit "return"
^

scala> 

scala> val i = 3
i: Int = 3

scala> val p = if (i > 0) -1 else -2
p: Int = -1

scala> val q = if (true) "No1" else "No2"
q: String = No1

scala> val name = "Mike"
name: String = Mike

scala> val greeting = "Hi"
greeting: String = Hi

scala> greeting + name
res0: String = HiMike

scala> greeting + "\n" + name
res1: String =
Hi
Mike

scala> val complexGreeting = """You are amazong, 
     | incredible,
     | young,
     | and ever so 
     | gracious
     | """
complexGreeting: String =
"You are amazong,
incredible,
young,
and ever so
gracious
"

scala> val p1 = "abc"
p1: String = abc

scala> val p2 = "abc"
p2: String = abc

scala> p1 == p2
res2: Boolean = true

scala> s"$greeting, $name, How are you today?"
res3: String = Hi, Mike, How are you today?

scala> s"${greeting * 2}, $name, How are you today?"
res4: String = HiHi, Mike, How are you today?

scala> val pi = 3.14
pi: Double = 3.14

scala> f"Pi is $pi%.2f"
res5: String = Pi is 3.14

scala> def printlnAny(x: Any)  = println(x)
printlnAny: (x: Any)Unit

scala> def printlnAny(x: AnyVal)  = println(x)
printlnAny: (x: AnyVal)Unit

scala> def printlnAny(x: AnyRef)  = println(x)
printlnAny: (x: AnyRef)Unit

scala> (1 to 10).sum
res6: Int = 55

scala> 
